with new genesis block implementation and BlockFactory, I had to modify generateBlock